# breadboard

./: CMakeLists.txt  README.md
data/: gridfragment.glsl
data/shaders/: CogBoxFragment.glsl  CogBoxVertex.glsl  CogNodeFragment.glsl  CogNodeVertex.glsl  GridFragment.glsl  GridVertex.glsl
design/: cog.drawio  command-undo.drawio  preview.drawio
scripts/: server.sh.in
src/: BaseApp.cpp  BaseApp.h  BreadApp.cpp  BreadApp.h  BreadEntityWorld.cpp  BreadEntityWorld.h  BreadRenderer.cpp  BreadRenderer.h  CameraComponent.h  CameraHelpers.cpp  CameraHelpers.h  CameraInputComponent.h  CameraInputSystem.cpp  CameraInputSystem.h  CameraSystem.cpp  CameraSystem.h  CogBoxRenderer.cpp  CogBoxRenderer.h  CogComponent.h  CogCreatedComponent.h  CogNodeRenderer.cpp  CogNodeRenderer.h  CogSystem.cpp  CogSystem.h  Demo.cpp  Demo.h  ECSGlobals.cpp  ECSGlobals.h  GlobalComponent.h  GridAttachmentSystem.cpp  GridAttachmentSystem.h  GridAttachmentsComponent.h  GridAttachmentsMap.h  GridRenderer.cpp  GridRenderer.h  GridSizeComponent.h  InputComponent.h  InputSystem.cpp  InputSystem.h  MouseTrailComponent.h  (+32 more)
src/Cogs/: Battery.cpp  Battery.h  BatteryComponent.h  BatterySystem.cpp  BatterySystem.h  Cog.cpp  Cog.h  CogHelpers.h  CogMap.cpp  CogMap.h  CogPrototype.cpp  CogPrototype.h  CogResourceId.h  Register.cpp  Register.h  Relay.cpp  Relay.h  Switch.cpp  Switch.h
src/Command/: CommandAddCogComponent.h  CommandCreateSystem.cpp  CommandCreateSystem.h  CommandDeleteCogComponent.h  CommandEntityComponent.h  CommandExecuteComponent.h  CommandListComponent.h  CommandListItemComponent.h  CommandListMaxSizeComponent.h  CommandListSizeComponent.h  CommandListSystem.cpp  CommandListSystem.h  CommandRemovedFromHistoryComponent.h  CommandToQueueComponent.h  CommandUndoComponent.h
src/Core/: ResourceId.h  Result.h  Rotation90.cpp  Rotation90.h  ShaderProgram.cpp  ShaderProgram.h
src/Engine/: ShaderHelpers.cpp  ShaderHelpers.h  ShaderProgram.cpp  ShaderProgram.h
src/ut/: CogCreateTest.cpp  CogSystemTest.cpp  CommandCreateSystemTest.cpp  CommandEntitySystemTest.cpp  CommandListSystemTest.cpp  GridAttachmentSystemTest.cpp  OnStageSystemTest.cpp  ResourceIdTest.cpp  ResultTest.cpp  Rotation90Test.cpp  ShadersTest.cpp  UIDragDropSystemTest.cpp  UIDragPreviewSystemTest.cpp  UIDragValidationSystemTest.cpp
